Added ui and fixed build

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,55 @@
 
 <html>
     <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
         <script src="./js/main.js"></script>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <h1>Test</h1>
-        <p>Body paragraph</p>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="d-flex col-sm-12 justify-content-center">
+                <a class="text-decoration-none" href="/">
+                    <h1>HigherLower</h1>
+                </a>
+            </div>
+        </nav>
+        <div class="container"></div>
+            <!-- Use templating later (handlebars) -->
+            <div class="d-flex col-sm-4 card">
+                <div class="card-body">
+                    <h3 class="card-title">New Game</h3>
+                    <p class="card-text">Starts a new HigherLower game</p>
+                    <button class="btn btn-primary" id="hl-btn-new-game">Go</button>
+                </div>
+            </div>
+            <div class="d-flex col-sm-4 card">
+                <div class="card-body">
+                    <h3 class="card-title">Bet</h3>
+                    <p class="card-text">Adds a bet to the pot</p>
+                    <button class="btn btn-primary" id="hl-btn-bet">Go</button>
+                </div>
+            </div>
+            <div class="d-flex col-sm-4 card">
+                <div class="card-body">
+                    <h3 class="card-title">Claim</h3>
+                    <p class="card-text">Claims the pot</p>
+                    <button class="btn btn-primary" id="hl-btn-claim">Go</button>
+                </div>
+            </div>
+            <div class="d-flex col-sm-4 card">
+                <div class="card-body">
+                    <h3 class="card-title">Info</h3>
+                    <p class="card-text">Current Game: <span id="hl-info-game">1</span></p>
+                    <p class="card-text">Bet Total: <span id="hl-info-bet-total">0.00 eth</span></p>
+                    <p class="card-text">Bet: <span id="hl-info-bet">0.00 eth</span></p>
+                    <p class="card-text">Claimable: <span id="hl-info-claimable">false</span></p>
+                    <p class="card-text">Can Start Next: <span id="hl-info-start-new">false</span></p>
+                    <button class="btn btn-primary" id="hl-btn-update-info">Update Info</button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
